Make has title checkbox not checked by default

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <textarea id="textInput" rows="8" placeholder="Введи текст сюди..."></textarea>
 
 <div class="checkbox-line">
-  <input type="checkbox" id="hasTitle" checked>
+  <input type="checkbox" id="hasTitle">
   <label for="hasTitle">Є заголовок (перший рядок — це заголовок)</label>
 </div>
 
